--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=coffee_backend
+
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=secret
+
+# Auto-create tables from JPA entities
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
