--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:false}
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+
+# Rate Limiting Configuration
+rate.limit.login.requests=${RATE_LIMIT_LOGIN_REQUESTS:5}
+rate.limit.login.duration=${RATE_LIMIT_LOGIN_DURATION:60}
+rate.limit.api.requests=${RATE_LIMIT_API_REQUESTS:100}
+rate.limit.api.duration=${RATE_LIMIT_API_DURATION:60}
