--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=coffee_backend
 
 # Database configuration
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/mydatabase}
+spring.datasource.username=${DATABASE_USERNAME:myuser}
+spring.datasource.password=${DATABASE_PASSWORD:secret}
 
 # Auto-create tables from JPA entities
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:false}
 spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 
-jwt.secret=${JWT_SECRET}
+jwt.secret=${JWT_SECRET:mySecretKey123456789012345678901234567890}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
-# Rate Limiting Configuration
-rate.limit.login.requests=${RATE_LIMIT_LOGIN_REQUESTS:5}
-rate.limit.login.duration=${RATE_LIMIT_LOGIN_DURATION:60}
-rate.limit.api.requests=${RATE_LIMIT_API_REQUESTS:100}
-rate.limit.api.duration=${RATE_LIMIT_API_DURATION:60}
+# Rate Limiting Configuration (temporarily disabled)
+# rate.limit.login.requests=${RATE_LIMIT_LOGIN_REQUESTS:5}
+# rate.limit.login.duration=${RATE_LIMIT_LOGIN_DURATION:60}
+# rate.limit.api.requests=${RATE_LIMIT_API_REQUESTS:100}
+# rate.limit.api.duration=${RATE_LIMIT_API_DURATION:60}
